[gd_scene load_steps=17 format=3 uid="uid://bejiqsf4wrw8y"]

[ext_resource type="Script" path="res://Scripts/boss.gd" id="1_7sadm"]
[ext_resource type="Texture2D" uid="uid://cok00hpuegpal" path="res://Sprites/Skeleton/Skeleton Idle.png" id="1_jc0q8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4khk0"]
atlas = ExtResource("1_jc0q8")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y7hr"]
atlas = ExtResource("1_jc0q8")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqo4e"]
atlas = ExtResource("1_jc0q8")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aygp"]
atlas = ExtResource("1_jc0q8")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj3ba"]
atlas = ExtResource("1_jc0q8")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmt1d"]
atlas = ExtResource("1_jc0q8")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t41hw"]
atlas = ExtResource("1_jc0q8")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdgbs"]
atlas = ExtResource("1_jc0q8")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vouxd"]
atlas = ExtResource("1_jc0q8")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsnoe"]
atlas = ExtResource("1_jc0q8")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvp3k"]
atlas = ExtResource("1_jc0q8")
region = Rect2(240, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2njff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4khk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y7hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqo4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj3ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmt1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t41hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdgbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vouxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsnoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvp3k")
}],
"loop": true,
"name": &"Test",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y5qfw"]
radius = 5.6
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tcsw"]
size = Vector2(30, 56)

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_7sadm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_2njff")
animation = &"Test"
autoplay = "Test"
frame_progress = 0.598924

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 11)
scale = Vector2(2.5, 2.5)
shape = SubResource("CapsuleShape2D_y5qfw")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-14, 11)
shape = SubResource("RectangleShape2D_2tcsw")

[node name="DamageTimer" type="Timer" parent="HurtBox"]
wait_time = 0.5
one_shot = true
